plugins {
    id 'java'
    id 'application'
    id 'com.gradleup.shadow' version '9.3.2'
    id 'jacoco'
}

group = 'com.gpuflight'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'com.gpuflight.agent.Main'
}

dependencies {
    implementation 'tools.jackson.core:jackson-databind:3.1.0'
    implementation 'org.apache.kafka:kafka-clients:3.7.0'
    implementation 'org.slf4j:slf4j-simple:2.0.12'
    implementation 'software.amazon.awssdk:s3:2.29.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << '-parameters'
}

shadowJar {
    // Default classifier 'all' → build/libs/gpuflight-agent-1.0-SNAPSHOT-all.jar
    mergeServiceFiles()
}

// Ensure distZip/distTar/startScripts see the shadow jar before packaging
tasks.named('distZip') { dependsOn shadowJar }
tasks.named('distTar') { dependsOn shadowJar }
tasks.named('startScripts') { dependsOn shadowJar }

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacoco {
    toolVersion = '0.8.13'
}

// Classes excluded from coverage:
//   LogArchiver, KafkaPublisher — require live external services (S3, Kafka broker)
//   Main — entry-point class whose main() blocks forever on a CountDownLatch;
//           all helper methods (resolve, require, loadFromArgs, etc.) are tested directly
def jacocoExcludes = [
    '**/LogArchiver.class',
    '**/KafkaPublisher.class',
    '**/Main.class',
    '**/GpuflAgent.class',
    '**/SessionWatcher.class',
    '**/TailerManager.class'
]

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
    classDirectories.setFrom(
        sourceSets.main.output.classesDirs.asFileTree.matching { exclude jacocoExcludes }
    )
}

jacocoTestCoverageVerification {
    classDirectories.setFrom(
        sourceSets.main.output.classesDirs.asFileTree.matching { exclude jacocoExcludes }
    )
    violationRules {
        rule {
            limit {
                minimum = 0.80
            }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification
